<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity"
    android:background="#B8B8B8">

    <ImageView
        android:id="@+id/displayImage"
        android:layout_width="wrap_content"
        android:layout_height="468dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="227dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="51dp"
        android:text="@string/upload" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="85dp"
        android:text="@string/name_of_artwork"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/type_the_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:background="@color/cardview_shadow_start_color"
        />


</RelativeLayout>